Allow us to set the buffer size for IO
This is used for network IO and in fact for all IO (including with stdin
and stdout). It defaults to 64K (even for stream protocols, which used to
default to 8K and which is not good enough on 10G Ethernet).

--- a/README
+++ b/README
@@ -64,6 +64,7 @@ protocol or whether or not the second argument contains a ':'.
 === options cross-reference
 
 Usage of ./call:
+  -B=65536: the buffer size for (network) IO; important for 10G Ethernet
   -C=0: if non-zero, only listen for this many connections then exit
   -H=false: print received datagrams as hex bytes
   -P=false: just print our known protocols
