--- a/README
+++ b/README
@@ -69,6 +69,7 @@ Usage of ./call:
   -H=false: print received datagrams as hex bytes
   -P=false: just print our known protocols
   -R=false: only receive datagrams, do not try to send stdin
+  -T=false: report TLS connection information
   -b="": make the call from this local address
   -l=false: listen for connections instead of make them
   -q=false: be quieter in some situations
@@ -94,6 +95,10 @@ sockets, since datagram sockets don't really have a connection count.
 require the addition of even more options to specify key, certificate,
 certificate chains and augh augh no. call.go already has too many
 options as it is.
+
+-T reports TLS connection information. Currently this includes the
+cipher and the server certificate CommonName (CN). With -v it adds the
+certificate's DNSAltNames if any (which usually includes the CN too).
 
 === -l oddities
 
